# funkot-autodj

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.cross  HANDOFF.md  LICENSE  README.md  README_id.md  README_ja.md  cross-build.sh  dev.sh  work.ps1  work.sh
.cargo/: config.toml
.cursor/rules/: real-transition-verify.mdc
.github/workflows/: ci.yml
funkot-cli/: Cargo.toml
funkot-cli/src/: lib.rs  main.rs  playlist.rs  wav_write.rs
funkot-cli/tests/: cli.rs
funkot-core/: Cargo.toml
funkot-core/examples/: gen_synth.rs  marker_phase_diag.rs  section_diag.rs  stretch_compare.rs  transition_phase_diag.rs
funkot-core/src/: analysis.rs  analysis_tests.rs  cache.rs  decode.rs  engine.rs  ffi.rs  filter.rs  lib.rs  stretch.rs  testutil.rs
funkot-core/tests/: analysis_golden.rs  engine.rs  fade_curve.rs  ffi.rs
funkot-core/tests/fixtures/: README.md  golden.json
include/: funkot.h
