[package]
name = "funkot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI front-end for the funkot-autodj mixing engine"

[[bin]]
name = "funkot-autodj"
path = "src/main.rs"

[lib]
name = "funkot_cli"
path = "src/lib.rs"

[dependencies]
funkot-core = { path = "../funkot-core" }
cpal = "0.18"
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1"
hound = "3.5"

[dev-dependencies]
funkot-core = { path = "../funkot-core", features = ["testutil"] }
hound = "3.5"
